--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
    <header class="header">
-      <div class="container">
+      <div class="container containet_headere">
          <h1 class="header_title">jurayeva salbina ergashvoy qizi</h1>
          <img class="header__image" src="img/Без названия.png" width="150" alt="">
       </div>
