--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
    <header class="header">
       <div class="container containet_headere">
          <h1 class="header_title">jurayeva salbina ergashvoy qizi</h1>
-         <img class="header__image" src="img/Без названия.png" width="150" alt="">
+         <div class="header__image-container">
+            <img class="header__image" src="img/Без названия.png" width="150" alt="">
+         </div>
+         
       </div>
       <section class="section section__header-bottom">
          <div class="container section__bottom-container">
